[tool.poetry]
name = "wallstreet"
version = "0.1.0"
description = ""
authors = ["Fabian Beuke <mail@beuke.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
tabulate = "^0.9.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[include]
include = ["config.ini"]
