[project]
name = "wallstreet"
version = "0.1.0"
description = "Stock quotes and comprehensive data for the terminal using Yahoo Finance"
authors = [{ name = "Fabian Beuke", email = "mail@beuke.org" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "yfinance>=0.2.40",
]
